--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@ $gold-tri: #fccc47;} */
 .App {
   text-align: center;
 }
+body{
+  /* background-color: black; */
+}
 
 .App-logo {
   height: 40vmin;
@@ -192,8 +195,7 @@ font-style: normal;
 font-weight: 500;
 line-height: 25.6px; /* 160% */
 letter-spacing: 1px;
-width: 638.84px;
-height: 73.19px;
+
 flex-direction: column;
 justify-content: center;
 flex-shrink: 0;
