--- a/src/App.css
+++ b/src/App.css
@@ -206,7 +206,7 @@ font-size: 75px;
 font-style: normal;
 font-weight: 800;
 line-height: 112.5px; 
-background: linear-gradient(132deg, #EEC5BD 0%, #4983ac 26.00%, #2f39a9 74.00%, #4f4b83 100%);
+background: linear-gradient(42deg, #e3c4bf 15%, #908eb0 20%, #2f39a9 74.00%, #7c5ee6 100%);
 background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
